--- a/galleery.html
+++ b/galleery.html
@@ -40,32 +40,33 @@
         <figure>
           <header class="heading">More detailed images</header>
           <ul class="nospace clear">
-            <li class="one_quarter first"><a href="#"><img src="images/covid.jpg" alt=""></a></li>
-            <li class="one_quarter"><a href="#"><img src="images/covid1.png" alt=""></a></li>
-            <li class="one_quarter"><a href="#"><img src="images/covid4.jpg" alt=""></a></li>
-            <li class="one_quarter"><a href="#"><img src="images/covid3.png" alt=""></a></li>
-            <li class="one_quarter first"><a href="#"><img src="images/stock.jpg" alt=""></a></li>
-            <li class="one_quarter"><a href="#"><img src="images/stock1.jpg" alt=""></a></li>
-            <li class="one_quarter"><a href="#"><img src="images/stock2.jpg" alt=""></a></li>
-            <li class="one_quarter"><a href="#"><img src="images/telescope.jpg" alt=""></a></li>
-            <li class="one_quarter first"><a href="#"><img src="images/telescope2.jpg" alt=""></a></li>
-            <li class="one_quarter"><a href="#"><img src="images/earth1.jpg" alt=""></a></li>
-            <li class="one_quarter"><a href="#"><img src="images/tesla1.jpg" alt=""></a></li>
-            <li class="one_quarter"><a href="#"><img src="images/tesla2.jpg" alt=""></a></li>
-            <li class="one_quarter first"><a href="#"><img src="images/biden.jpg" alt=""></a></li>
-            <li class="one_quarter"><a href="#"><img src="images/kate.png" alt=""></a></li>
-            <li class="one_quarter"><a href="#"><img src="images/ice.jpg" alt=""></a></li>
-            <li class="one_quarter"><a href="#"><img src="images/temperatues.jpg" alt=""></a></li>
-            <li class="one_quarter first"><a href="#"><img src="images/painting.jpeg" alt=""></a></li>
-            <li class="one_quarter"><a href="#"><img src="images/painting1.jpg" alt=""></a></li>
-            <li class="one_quarter"><a href="#"><img src="images/theatre.jpg" alt=""></a></li>
-            <li class="one_quarter"><a href="#"><img src="images/theatre1.jpeg" alt=""></a></li>
+            <li class="one_quarter first"><a><img src="images/covid.jpg" alt=""></a></li>
+            <li class="one_quarter"><a><img src="images/covid1.png" alt=""></a></li>
+            <li class="one_quarter"><a><img src="images/covid4.jpg" alt=""></a></li>
+            <li class="one_quarter"><a><img src="images/covid3.png" alt=""></a></li>
+            <li class="one_quarter first"><a><img src="images/stock.jpg" alt=""></a></li>
+            <li class="one_quarter"><a><img src="images/stock1.jpg" alt=""></a></li>
+            <li class="one_quarter"><a><img src="images/stock2.jpg" alt=""></a></li>
+            <li class="one_quarter"><a><img src="images/telescope.jpg" alt=""></a></li>
+            <li class="one_quarter first"><a><img src="images/telescope2.jpg" alt=""></a></li>
+            <li class="one_quarter"><a><img src="images/earth1.jpg" alt=""></a></li>
+            <li class="one_quarter"><a><img src="images/tesla1.jpg" alt=""></a></li>
+            <li class="one_quarter"><a><img src="images/tesla2.jpg" alt=""></a></li>
+            <li class="one_quarter first"><a><img src="images/biden.jpg" alt=""></a></li>
+            <li class="one_quarter"><a><img src="images/kate.png" alt=""></a></li>
+            <li class="one_quarter"><a><img src="images/ice.jpg" alt=""></a></li>
+            <li class="one_quarter"><a><img src="images/temperatues.jpg" alt=""></a></li>
+            <li class="one_quarter first"><a><img src="images/painting.jpeg" alt=""></a></li>
+            <li class="one_quarter"><a><img src="images/painting1.jpg" alt=""></a></li>
+            <li class="one_quarter"><a><img src="images/theatre.jpg" alt=""></a></li>
+            <li class="one_quarter"><a><img src="images/theatre1.jpeg" alt=""></a></li>
+          
           </ul>
           <figcaption>Pictures taken from news events</figcaption>
         </figure>
       </div>
       <nav class="pagination">
-        <ul>
+        <!-- <ul>
           <li><a href="#">&laquo; Previous</a></li>
           <li><a href="#">1</a></li>
           <li><a href="#">2</a></li>
@@ -78,7 +79,7 @@
           <li><a href="#">14</a></li>
           <li><a href="#">15</a></li>
           <li><a href="#">Next &raquo;</a></li>
-        </ul>
+        </ul> -->
       </nav>
     </div>
     <div class="clear"></div>
