--- a/hoome.html
+++ b/hoome.html
@@ -14,7 +14,7 @@
           </div>
           <nav id="mainav" class="fl_right">
             <ul class="clear">
-              <li class="active"><a href="hoome.html">Home</a></li>
+              <li class="active"><a href="hoome.html">Homee</a></li>
               <li><a href="galleery.html">Gallery</a></li>
               <li><a href="login.html">Login</a></li>
             </ul>
