--- a/galleery.html
+++ b/galleery.html
@@ -30,7 +30,7 @@
 <div class="wrapper coloured">
   <article class="hoc cta clear">
     <h6 class="three_quarter first font-x2">Pictures of the previous news shown in The Home Page</h6>
-    <footer class="one_quarter"><a class="btn" href="#"><strong>Go Back</strong></a></footer>
+    <!--<footer class="one_quarter"><a class="btn" href="#"><strong>Go Back</strong></a></footer>-->
   </article>
 </div>
 <div class="wrapper row3">
